--- a/Source/resources.qrc
+++ b/Source/resources.qrc
@@ -1,6 +1,12 @@
 <RCC>
-  <qresource prefix="Icons">
-    <file>../Resources/Icons/chrFile.ico</file>
-    <file>../Resources/Icons/wmv.ico</file>
+  <qresource>
+    <file>../Resources/Images/About_Icon.png</file>
+    <file>../Resources/Images/Character_Load.png</file>
+    <file>../Resources/Images/Character_Save.png</file>
+    <file>../Resources/Splash/Splash_001.png</file>
+    <file>../Resources/FileIcons/chrFile.icns</file>
+    <file>../Resources/FileIcons/chrFile.ico</file>
+    <file>../Resources/FileIcons/wmv.icns</file>
+    <file>../Resources/FileIcons/wmv.ico</file>
   </qresource>
 </RCC>
